src/test/ui/consts/control-flow/issue-50577.stock.stderr
error[E0658]: `match` is not allowed in a `const`
  --> $DIR/issue-50577.rs:7:16
   |
LL |         Drop = assert_eq!(1, 1)
   |                ^^^^^^^^^^^^^^^^
   |
   = note: for more information, see https://github.com/rust-lang/rust/issues/49146
   = help: add `#![feature(const_if_match)]` to the crate attributes to enable
   = note: this error originates in a macro (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0658]: `if` is not allowed in a `const`
  --> $DIR/issue-50577.rs:7:16
   |
LL |         Drop = assert_eq!(1, 1)
   |                ^^^^^^^^^^^^^^^^
   |
   = note: for more information, see https://github.com/rust-lang/rust/issues/49146
   = help: add `#![feature(const_if_match)]` to the crate attributes to enable
   = note: this error originates in a macro (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0658]: `match` is not allowed in a `const`
  --> $DIR/issue-50577.rs:7:16
   |
LL |         Drop = assert_eq!(1, 1)
   |                ^^^^^^^^^^^^^^^^
   |
   = note: for more information, see https://github.com/rust-lang/rust/issues/49146
   = help: add `#![feature(const_if_match)]` to the crate attributes to enable
   = note: this error originates in a macro (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0317]: `if` may be missing an `else` clause
  --> $DIR/issue-50577.rs:7:16
   |
LL |         Drop = assert_eq!(1, 1)
   |                ^^^^^^^^^^^^^^^^
   |                |
   |                expected `()`, found `isize`
   |                found here
   |
   = note: `if` expressions without `else` evaluate to `()`
   = help: consider adding an `else` block that evaluates to the expected type
   = note: this error originates in a macro (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to 4 previous errors

Some errors have detailed explanations: E0317, E0658.
For more information about an error, try `rustc --explain E0317`.
